(fix) fixing modal z-index

--- a/css/general.css
+++ b/css/general.css
@@ -699,6 +699,8 @@ i {
 /* Modal Styles: */
 /* ******************************* */
 
+/* TODO: working onn some details for modal */
+
 .modal-container {
   width: 100%;
   height: 100%;
@@ -710,6 +712,7 @@ i {
   align-items: center;
   background-color: #0000005b;
   display: none;
+  z-index: 99999;
 }
 
 .modal-container.active {
